--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container-lg mt-5">
         <div class="d-flex align-items-center justify-content-between my-4">
             <div class="h2"> Catalogo Libri </div>
-            <button class="btn btn-primary">Aggiungi Libro</button>
+            <button class="btn btn-primary"><a href="new-book.html" class="text-decoration-none text-white">Aggiungi Libro</a></button>
         </div>
         <main class="row flex-lg-row">
             <div class="table-container col-lg-8">
