--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse justify-content-between align-center" id="main-nav">
             <ul class="navbar-nav text-secondary">
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Catalogo Librik</a>
+                <a class="nav-link text-white" href="#">Catalogo Libri</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="#">Anagrafica utenti</a>
