--- a/new-book.html
+++ b/new-book.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse justify-content-between align-center" id="main-nav">
                 <ul class="navbar-nav text-secondary">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Catalogo Librik</a>
+                        <a class="nav-link text-white" href="index.html">Catalogo Libri</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#">Anagrafica utenti</a>
